ui-yaml/deployment.yaml

#deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-ui-deploy
  namespace: chatbot-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-ui
  template:
    metadata:
      labels:
        app: chatbot-ui
    spec:
      containers:
        - name: chatbot-ui
          image: aksaz01sboxpoc01.azurecr.io/heewon00/miassist-ui:version5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: acr-secret
