ui-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ui-ingress
  namespace: chatbot-ui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx   
  rules:
  - host: miassist.koreacentral.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatbot-ui-service
            port:
              number: 80
